Refatoração global: Padronização de arquitetura, Common Lib e melhorias de código